# lab_qt_2

./: .gitignore  CMakeLists.txt  imageutils.cpp  imageutils.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md  resource.qrc
headers/converters/: Convert.h  ImageConverterInterface.h  ImageFormatConverter.h  PNMImageConverter.h
headers/core/: FilterFactory.h  ImageProcessor.h
headers/filters/: BrightnessAdjustmentFilter.h  ContrastAdjustmentFilter.h  GrayscaleFilter.h  ImageFilterInterface.h  NegativeFilter.h  PointOperationFilter.h  SaturationAdjustmentFilter.h
headers/gui/: mainwindow.h
headers/io/: ImageFileHandler.h  ImageFileHandlerInterface.h
img/: p1.pbm  p2.pgm  p3.ppm  p4.pbm  p5.pgm  p6.ppm
sources/: main.cpp
sources/converters/: Convert.cpp  ImageFormatConverter.cpp  PNMImageConverter.cpp
sources/core/: FilterFactory.cpp  ImageProcessor.cpp
sources/filters/: BrightnessAdjustmentFilter.cpp  ContrastAdjustmentFilter.cpp  GrayscaleFilter.cpp  NegativeFilter.cpp  PointOperationFilter.cpp  SaturationAdjustmentFilter.cpp
sources/gui/: mainwindow.cpp
sources/io/: ImageFileHandler.cpp
